# pdf-search-and-copy

./: CvScripts.py  README.md  pyproject.toml
