[tool.poetry]
name = "cvkeywordsearchandmove"
version = "0.1.0"
description = ""
authors = ["ashamsu95 <ashamsuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
